# propms-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  propms.postman_collection.json  propms.yaml  pyproject.toml
.github/actions/: action.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 32f36fdd9135_initial_schema.py  b5c63eac8a8f_add_admin_id_to_properties.py  b5c63eac8a8f_add_property_admin_relationship.py
app/: config.py  database.py  main.py
app/api/: auth.py  dashboard.py  deps.py  issues.py  messaging.py  payments.py  properties.py  tenants.py  ussd.py  waitlist.py
app/models/: __init__.py  admin.py  issue.py  payment.py  property.py  tenant.py  waitlist.py
app/schemas/: __init__.py  auth.py  common.py  dashboard.py  issue.py  messaging.py  payment.py  property.py  tenant.py  ussd.py  waitlist.py
app/services/: analytics_service.py  auth_service.py  sms_service.py  ussd_service.py
app/utils/: pagination.py  security.py
scripts/: seed_admin.py
