[project]
name = "propms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6",
    "africastalking>=1.2.7",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
